--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.pain.fleetin.brestblacklistgen"
+        applicationId "com.pain.fleetin.brestblacklist"
         minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.android.support:support-v13:23.4.0'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.android.support:cardview-v7:23.4.0'
+    compile 'com.vk:androidsdk:1.6.5'
 }
