--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.vk:androidsdk:1.6.5'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
